5 of 6 - 1 align issue remains

--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -41,6 +41,7 @@ h2, h3 {
 section {
     /* enter needed declarations here */
     display: flex;
+    margin: 0.5em 0;
 }
 
 section:nth-of-type(1) {
@@ -79,11 +80,16 @@ section:nth-of-type(1) div:last-child {
 
 section:nth-of-type(3) {
     /* enter needed declarations here */
+    justify-content: flex-end;
+    align-items: center;
 }
 
 section:nth-of-type(3) h3 {
     /* enter needed declarations here */
-
+    /*align-items: center;*/
+    justify-self: flex-start;
+    /*justify-items: flex-start;*/
+    /*justify-self: flex-start;*/
 }
 
 .orange-circle {
@@ -99,6 +105,7 @@ section:nth-of-type(3) h3 {
     width: 5em;
     background: brown;
     /* enter needed declarations here */
+    flex-grow: 1;
 }
 
 .large-brown-box:nth-of-type(2) {
@@ -107,6 +114,7 @@ section:nth-of-type(3) h3 {
 
 section:nth-of-type(5) {
     /* enter needed declarations here */
+    justify-content: space-evenly;
 }
 
 .yellow-box {
@@ -119,6 +127,9 @@ section:nth-of-type(6) {
     background: coral;
     height: 14em;
     /* enter needed declarations here */
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .grey-box {
